--- a/cs-ui-demo/src/sass/_theme.scss
+++ b/cs-ui-demo/src/sass/_theme.scss
@@ -123,7 +123,7 @@ $cs-white: #ffffff;
 	--prop-link-c: #{$cs-blue-sf};
 	--prop-inline-container-fill: #{$cs-mint};
 	--prop-info-c: #{$cs-gray-dark-6};
-	--prop-custom-bg: #{$cs-gray-light-4};
+	--prop-custom-bg: #{$cs-gray-light-3};
 	--prop-custom-c: #{$cs-gray-dark-6};
 	--prop-table-cell-br: #{$cs-gray-light-2};
 	--prop-table-row-stripes-bg-light: #{$cs-white};
@@ -174,7 +174,7 @@ $cs-white: #ffffff;
 	--api-method-c: #{$cs-gray-medium-1};
 	--version-desc-bg: #{$cs-gray-light-8};
 	--snippet-bg: #{$cs-gray-light-8};
-	--divider-br: #{$cs-gray-light-3};
+	--divider-br: #{$cs-gray-medium-3};
 }
 
 /* Dark theme support
