--- a/cs-ui-demo/src/sass/previews/_custom.scss
+++ b/cs-ui-demo/src/sass/previews/_custom.scss
@@ -299,7 +299,7 @@
 }
 
 .cs-btn-type-preview-wrapper {
-	padding: 2rem 2rem 0 3rem;
+	padding: 3rem 3rem 0;
 
 	.cs-btn-type-preview {
 		background: var(--cs-btn-bg);
