--- a/cs-ui-demo/src/sass/previews/_preview-accessibility.scss
+++ b/cs-ui-demo/src/sass/previews/_preview-accessibility.scss
@@ -1,5 +1,5 @@
 .accessibility-conformance-section {
-	padding: 0 2rem 2rem 3rem;
+	padding: 0 3rem 3rem;
 
 	h3 {
 		margin-bottom: 0.25rem;
