--- a/cs-ui-demo/src/sass/previews/_preview.scss
+++ b/cs-ui-demo/src/sass/previews/_preview.scss
@@ -86,6 +86,10 @@
 						max-height: unset;
 					}
 				}
+
+				&.sidebar-preview ~ .version-description {
+					max-height: unset;
+				}
 			}
 		}
 	}
